--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,10 +10,8 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
+            <li><%=link_to('View All Categories',categories_path)%></li>
+            <li><%=link_to('View All Articles',articles_path) %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
       <% if current_user %>
