Uploading a photo while creating an article

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -6,6 +6,7 @@
     <%= f.input :description %>
     <%= f.input :published %>
     <%= f.association :categories %>
+    <%= f.file_field :avatar %>
   </div>
 
   <div class="form-actions">
