Roles added and View updated

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -6,6 +6,7 @@
     <%= f.input :description %>
     <%= f.input :published %>
     <%= f.association :categories %>
+    <%= f.label :avatar %>
     <%= f.file_field :avatar %>
   </div>
 
