--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,7 +9,13 @@
       <th>Description</th>
       <th>Published</th>
       <th>Author</th>
-      <th colspan="3">Actions</th>
+      <% if(current_user.role == "admin") %>
+        <th colspan="3">Actions</th>
+      <% elsif(current_user.role == "writer") %>
+        <th colspan="2">Actions</th>
+      <% else %>
+        <th>Actions</th>
+      <% end%>
     </tr>
   </thead>
 
@@ -20,14 +26,25 @@
         <td><%= article.description %></td>
         <td><%= article.published %></td>
         <td><%= article.author.email %></td>
-        <td><%= link_to 'Show', article %></td>
-        <td><%= link_to 'Edit', edit_article_path(article),:class => 'btn btn-primary' %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } ,:class => 'btn btn-danger' %></td>
+        <% if(current_user.role == "admin") %>
+          <td><%= link_to 'Show', article ,:class => 'btn btn-default'%></td>
+          <td><%= link_to 'Edit', edit_article_path(article),:class => 'btn btn-primary' %></td>
+          <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } ,:class => 'btn btn-danger' %></td>
+        <% elsif(current_user.role == "writer" && article.author_id == current_user.id) %>
+           <td><%= link_to 'Show', article %></td>
+           <td><%= link_to 'Edit', edit_article_path(article),:class => 'btn btn-primary' %></td>
+           <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } ,:class => 'btn btn-danger' %></td>
+        <% elsif(current_user.role == "writer" ) %>
+            <td><%= link_to 'Show', article,:class => 'btn btn-default' %></td>
+        <% else %>
+            <td><%= link_to 'Show', article,:class => 'btn btn-default' %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 <%= paginate @articles %>
 <br>
-
-<%= link_to 'New Article', new_article_path %>
+<% if(current_user.role == "writer" || current_user.role == "admin") %>
+  <%= link_to 'New Article', new_article_path %>
+<% end %>
