--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -19,6 +19,7 @@
   <strong>Author:</strong>
   <%= @article.author.first_name %>
 </p>
-
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
+<% if((current_user.role == "admin" ) ||(current_user.role == "writer")) %>
+	<%= link_to 'Edit', edit_article_path(@article) %> 
+<% end %>
+| <%= link_to 'Back', articles_path %>
