--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -8,7 +8,11 @@
       <th>Title</th>
       <th>Body</th>
       <th>Published?</th>
-      <th colspan="3">Actions</th>
+      <% if(current_user.role == "admin") %>
+        <th colspan="3">Actions</th>
+      <% else %>
+        <th>Actions</th>
+      <% end%>
     </tr>
   </thead>
 
@@ -18,9 +22,13 @@
         <td><%= category.title %></td>
         <td><%= category.body %></td>
         <td><%= category.published%></td>
-        <td><%= link_to 'Show', category, class: 'btn btn-default' %></td>
-        <td><%= link_to 'Edit', edit_category_path(category), class: 'btn btn-primary' %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
+        <% if(current_user.role == "admin") %>
+            <td><%= link_to 'Show', category, class: 'btn btn-default' %></td>
+            <td><%= link_to 'Edit', edit_category_path(category), class: 'btn btn-primary' %></td>
+            <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
+         <% else %>
+            <td><%= link_to 'Show', category, class: 'btn btn-default' %></td>
+         <% end %>
       </tr>
     <% end %>
   </tbody>
@@ -28,5 +36,6 @@
 <%= paginate @categories %>
 
 <br>
-
-<%= link_to 'New Category', new_category_path %>
+<%if (current_user.role=="admin" )%>
+  <%= link_to 'New Category', new_category_path %>
+<% end %>
