--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -14,6 +14,7 @@
   <strong>Published:</strong>
   <%= @category.published %>
 </p>
-
-<%= link_to 'Edit', edit_category_path(@category) %> |
+<%if(current_user.role=="admin")%>
+	<%= link_to 'Edit', edit_category_path(@category) %> |
+<%end%>
 <%= link_to 'Back', categories_path %>
