--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,9 +9,9 @@
       <th>Description</th>
       <th>Published</th>
       <th>Author</th>
-      <% if(current_user.role == "admin") %>
+      <% if(current_user.admin?) %>
         <th colspan="3">Actions</th>
-      <% elsif(current_user.role == "writer") %>
+      <% elsif(current_user.writer?) %>
         <th colspan="2">Actions</th>
       <% else %>
         <th>Actions</th>
@@ -26,15 +26,15 @@
         <td><%= article.description %></td>
         <td><%= article.published %></td>
         <td><%= article.author.email %></td>
-        <% if(current_user.role == "admin") %>
+        <% if(current_user.admin?) %>
           <td><%= link_to 'Show', article ,:class => 'btn btn-default'%></td>
           <td><%= link_to 'Edit', edit_article_path(article),:class => 'btn btn-primary' %></td>
           <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } ,:class => 'btn btn-danger' %></td>
-        <% elsif(current_user.role == "writer" && article.author_id == current_user.id) %>
+        <% elsif current_user.role.writer? && article.author_id == current_user.id %>
            <td><%= link_to 'Show', article %></td>
            <td><%= link_to 'Edit', edit_article_path(article),:class => 'btn btn-primary' %></td>
            <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } ,:class => 'btn btn-danger' %></td>
-        <% elsif(current_user.role == "writer" ) %>
+        <% elsif current_user.writer? %>
             <td><%= link_to 'Show', article,:class => 'btn btn-default' %></td>
         <% else %>
             <td><%= link_to 'Show', article,:class => 'btn btn-default' %></td>
@@ -45,6 +45,6 @@
 </table>
 <%= paginate @articles %>
 <br>
-<% if(current_user.role == "writer" || current_user.role == "admin") %>
+<% if(current_user.writer? || current_user.admin?) %>
   <%= link_to 'New Article', new_article_path %>
 <% end %>
