--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -30,7 +30,7 @@
           <td><%= link_to 'Show', article ,:class => 'btn btn-default'%></td>
           <td><%= link_to 'Edit', edit_article_path(article),:class => 'btn btn-primary' %></td>
           <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } ,:class => 'btn btn-danger' %></td>
-        <% elsif current_user.role.writer? && article.author_id == current_user.id %>
+        <% elsif current_user.writer? && article.author_id == current_user.id %>
            <td><%= link_to 'Show', article %></td>
            <td><%= link_to 'Edit', edit_article_path(article),:class => 'btn btn-primary' %></td>
            <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } ,:class => 'btn btn-danger' %></td>
