--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,9 +26,15 @@
   </div>
 
   <div class="field">
-  <%= f.label :last_name %><br/>
-  <%= f.text_field :last_name, autofocus: :true%>
+    <%= f.label :last_name %><br/>
+    <%= f.text_field :last_name, autofocus: :true%>
   </div>
+  
+  <div class="field">
+    <%= f.label :image %><br/>
+    <%= f.file_field :image, autofocus: :true%>
+  </div>
+  
   <div class="field">
     <%= f.label :date_of_birth %><br/>
     <%= f.date_field :date_of_birth %>
@@ -39,3 +45,10 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+
+<% unless current_user %>
+  <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %>
+<% else %>
+  <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+<% end %>
