Updated Working ActionMailer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+  	<meta name="google-site-verification" content="jS-0qVgd-_MHfrj8pT5z_evb_TuJlEbFSajlL3K2lNQ" />
     <title>Blog</title>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
