--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,54 +1,72 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class="container">
+<div id="signupbox" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+  <div class="panel panel-info">
+      <div class="panel-heading">
+        <div class="panel-title">Sign Up</div>
+        <div style="float:right; font-size: 85%; position: relative; top:-10px">
+           <%= link_to "Sign In" , new_user_session_path ,id: 'signinlink' %>
+        </div>
+      </div>  
+      <div class="panel-body" >  
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%if devise_error_messages!.blank? %>
+        <%else%>
+        <div id="signupalert" class="alert alert-danger">
+          <p><%= devise_error_messages! %></p>
+          <span></span>
+        </div>
+        <%end%>                    
+        <div class="form-group">
+            <%= f.label :email ,class: "col-md-3 control-label"%>
+            <div class="col-md-9">
+                <%= f.email_field :email, autofocus: true %>
+            </div>
+        </div>    
+        <div class="form-group">
+            <%= f.label :first_name,class: "col-md-3 control-label" %>
+            <div class="col-md-9">
+                  <%= f.text_field :first_name, autofocus: :true%>
+            </div>
+        </div>
+        <div class="form-group">
+          <%= f.label :last_name ,class: "col-md-3 control-label"  %>
+          <div class="col-md-9">
+              <%= f.text_field :last_name, autofocus: :true%>
+          </div>
+        </div>
+        <div class="form-group">
+            <%= f.label :password ,class: "col-md-3 control-label" %>
+            <div class="col-md-9">
+                <%= f.password_field :password, autocomplete: "off" %>
+            </div>
+        </div>
+        <div class="form-group">
+          <%= f.label :password_confirmation,'Password c.' ,class: "col-md-3 control-label"  %>
+          <div class="col-md-9">
+          <%= f.password_field :password_confirmation, autocomplete: "off" %>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= f.label :image ,class: "col-md-3 control-label"  %>
+          <div class="col-md-9">
+            <%= f.file_field :image, autofocus: :true%>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= f.label :date_of_birth ,class: "col-md-3 control-label"  %>
+          <div class="col-md-9">
+            <%= f.date_field :date_of_birth %>
+          </div>
+        </div>
+        <div class="form-group">                                        
+          <div class="col-md-offset-3 col-md-9">
+              <%= f.submit " Sign Up" ,class: "btn btn-info",id: "btn-signup" %>  
+              <%= link_to " Sign Up with Facebook " , user_facebook_omniauth_authorize_path ,class: "btn btn-primary ",id: "btn-fbsignup" %>
+         
+          </div>
+        </div>
+        <% end %>
+        <div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-  <div class="field">
-  <%= f.label :first_name %><br/>
-  <%= f.text_field :first_name, autofocus: :true%>
-  </div>
-
-  <div class="field">
-    <%= f.label :last_name %><br/>
-    <%= f.text_field :last_name, autofocus: :true%>
-  </div>
-  
-  <div class="field">
-    <%= f.label :image %><br/>
-    <%= f.file_field :image, autofocus: :true%>
-  </div>
-  
-  <div class="field">
-    <%= f.label :date_of_birth %><br/>
-    <%= f.date_field :date_of_birth %>
-  </div>
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
-
-
-<% unless current_user %>
-  <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %>
-<% else %>
-  <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-<% end %>
+</div>
